# gen-ai-test

./: .gitignore  manage_links.py  pyproject.toml  scraper.py
src/scraper/: Article.py  BatchScraper.py  LinkCollector.py
src/utils/: config.py  loggers.py
