[project]
name = "GenAI-Test"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.14.2",
    "colorama>=0.4.6",
    # do not forget to run `playwright install` after installing or updating playwright
    "playwright>=1.55.0",
]
